1) top-bar fixed 2) collapse-animation

--- a/css/content.css
+++ b/css/content.css
@@ -4,9 +4,36 @@
     width: 80%;
     min-height: 100vh;
     margin: auto;
-    margin-top: 1rem;
+    margin-top: var(--topbar-height);
+}
 
-    border: 1px solid red;
+
+@keyframes adjust-site-body {
+    0% {
+        margin-top: var(--body-margin-top);
+    }
+
+    100% {
+        margin-top: var(--adjust-body-margin-top);
+    }
+}
+
+.site-body-adjust {
+    animation: adjust-site-body var(--nav-collapse-time) ease-in-out forwards;
+}
+
+@keyframes un-adjust-site-body {
+    0% {
+        margin-top: var(--adjust-body-margin-top);
+    }
+
+    100% {
+        margin-top: var(--body-margin-top);
+    }
+}
+
+.site-body-un-adjust {
+    animation: un-adjust-site-body var(--nav-collapse-time) ease-in-out forwards;
 }
 
 
@@ -19,33 +46,6 @@
 }
 
 
-@keyframes adjust-content {
-    0% {
-        margin-left: var(--body-margin-left);
-    }
-
-    100% {
-        margin-left: var(--adjust-body-margin-left);
-    }
-}
-
-.content-adjust {
-    animation: adjust-content var(--nav-collapse-time) ease-in-out forwards;
-}
-
-@keyframes un-adjust-content {
-    0% {
-        margin-left: var(--adjust-body-margin-left);
-    }
-
-    100% {
-        margin-left: var(--body-margin-left);
-    }
-}
-
-.content-un-adjust {
-    animation: un-adjust-content var(--nav-collapse-time) ease-in-out forwards;
-}
 
 .content-section-head {
     width: 100%;
@@ -57,14 +57,12 @@
 }
 
 .section-tab {
-    /* width: 49%; */
     flex: 1;
     height: 3rem;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 2rem;
-    /* border: 1px solid blue; */
 
     cursor: pointer;
 
@@ -80,8 +78,6 @@
 .content-section-body {
     width: 100%;
     height: 100%;
-    /* min-height: 80vh; */
-    /* border: 1px solid red; */
     background-color: var(--grey-100);
     font-family: var(--font-bree);
 
